# Tarea-5_ASIES

./: .buildinfo  Intro_To_Optimization.html  README.html  README.md  objects.inv  pyproject.toml  search.html
tarea5/: _toc.yml  ahp_tables_exercise.xlsx  intro.md
tarea5/_build/.doctrees/: Intro_To_Optimization.doctree  README.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
tarea5/_build/html/: genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
tarea5/_build/html/_sources/: Intro_To_Optimization.ipynb
tarea5/_build/jupyter_execute/: Intro_To_Optimization.ipynb  markdown-notebooks.ipynb
